# kanblam

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN_NEEDS_INPUT.md  README.md  spinner-demo.html
.claude/: settings.json
.kanblam/: tasks.json
.kanclaude/: applied-6b78377b-0c16-41c8-aff8-dd7e7f3eaba4.patch
docs/: WELCOME_PANEL_DESIGN.md  git-isolation-for-claude-sessions.md
docs/design/: worktree-isolation.md
docs/research/: git-isolation-for-claude-sessions.md
sidecar/: package-lock.json  package.json
sidecar/src/: main.ts  protocol.ts  session-manager.ts  watcher.ts
src/: app.rs  main.rs  message.rs
src/hooks/: installer.rs  mod.rs  watcher.rs
src/image/: mod.rs
src/model/: mod.rs
src/notify/: audio.rs  mod.rs  tmux_status.rs
src/sidecar/: client.rs  mod.rs  protocol.rs
src/statusbar/: mod.rs
src/tmux/: capture.rs  mod.rs  session.rs
src/ui/: interactive_modal.rs  kanban.rs  logo.rs  mod.rs  output.rs  status_bar.rs  ultrathink.rs  watcher.rs  welcome.rs
src/worktree/: git.rs  mod.rs  settings.rs
