[package]
name = "kanclaude"
version = "0.1.0"
edition = "2021"
description = "TUI Kanban board for orchestrating parallel Claude Code sessions"
authors = ["Peerby <dev@peerby.com>"]
license = "MIT"
repository = "https://github.com/Peerby/kanblam"
homepage = "https://github.com/Peerby/kanblam"
keywords = ["kanban", "claude", "ai", "tui", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI Framework
ratatui = "0.30"
crossterm = "0.28"
edtui = { version = "0.10.6", default-features = false }

# Image support (disabled for now - will add later)
# ratatui-image = { version = "1.0", features = ["crossterm"] }
arboard = "3.4"
image = "0.24"

# Tmux integration
tmux_interface = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "6.1"

# Audio notifications
rodio = { version = "0.17", default-features = false, features = ["mp3"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
exec = "0.3"

# Terminal emulation for interactive pane
vt100 = "0.15"

[[bin]]
name = "kanclaude"
path = "src/main.rs"
